# svg2json

./: CMakeLists.txt  LICENSE  README.md
src/: JSONPath.cpp  JSONPath.h  SVGPath.cpp  SVGPath.h  main.cpp
